@@ -20,7 +20,7 @@ before_install:
  - sudo apt-add-repository ppa:ubuntu-sdk-team/ppa -y
  - sudo apt-get update -q -y
 install:
- - sudo apt-get install -q -y gcc-4.8 g++-4.8 qt5-default libqt5opengl5-dev libeigen3-dev
+ - sudo apt-get install -q -y gcc-4.8 g++-4.8 qt5-default libqt5opengl5-dev
  - sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-4.8 50
  - sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-4.8 50
 script: mkdir -p build && cd build && qmake ../ && make -j4
