@@ -6,13 +6,6 @@ set(CMAKE_MODULE_PATH ${SphereSim_SOURCE_DIR}/cmake)
 file(STRINGS "VERSION" VERSION)
 add_definitions("-DVERSION=${VERSION}")
 
-set(USE_EIGEN_LIBRARY 1)
-if(USE_EIGEN_LIBRARY GREATER 0)
-    find_package(Eigen3 REQUIRED)
-    include_directories(SYSTEM "${EIGEN3_INCLUDE_DIR}")
-endif(USE_EIGEN_LIBRARY GREATER 0)
-add_definitions("-DUSE_EIGEN_LIBRARY=${USE_EIGEN_LIBRARY}")
-
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 set(EXECUTABLE_OUTPUT_PATH ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})
 set(LIBRARY_OUTPUT_PATH ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})
