@@ -10,7 +10,7 @@ arch=('i686' 'x86_64' 'armv7h')
 url="http://sourceforge.net/projects/spheresim/"
 license=('BSD 3-clause')
 depends=('qt5-base' 'mesa')
-makedepends=('git' 'cmake' 'eigen')
+makedepends=('git' 'cmake')
 options=()
 conflicts=('spheresim')
 provides=('spheresim')
