@@ -10,7 +10,7 @@ arch=('any')
 url="http://sourceforge.net/projects/spheresim/"
 license=('BSD 3-clause')
 depends=('mingw-w64-crt' 'mingw-w64-qt5-base')
-makedepends=('git' 'mingw-w64-gcc' 'mingw-w64-cmake' 'mingw-w64-eigen')
+makedepends=('git' 'mingw-w64-gcc' 'mingw-w64-cmake')
 options=('!strip' '!buildflags' 'staticlibs')
 conflicts=('mingw-w64-spheresim')
 provides=('mingw-w64-spheresim')
