@@ -30,6 +30,7 @@
 * Added a vector proxy class forwarding to Eigen.
 * Replaced all arithmetic by assignment vector operations.
 * Replaced Eigen library by custom vector implementation.
+* Removed Eigen dependency occurrences.
 
 SphereSim 3.0.2:
 * Fixed Viewer linking.
